# netsec

Krypto/oving1/: oppgaver.docx
Krypto/oving1/oppg2/: main.cpp
Krypto/oving1/oppg3/: CMakeLists.txt  main.cpp  main2.cpp
Krypto/oving22k/RSA/: CMakeLists.txt  main.cpp
Linux/oving2/: fargerikt.c.save  fargerikt.c.save.1  makefile
Linux/oving3/: finnTextfiler  kopierTekstfiler  opgg_6.txt  ovingstekst.txt  rydd
Linux/oving_2L/: fargerikt.c  finfargeDiff.c  patchfil
Linux/oving_3L/: arkiver.sh  fargedemo.2  flyttjpg  last30days.txt  oppg_5
Linux/oving_9L/: epostsjekk  epostsjekk2
Sikkerhet/oving_10s/: text.txt
Sikkerhet/oving_10s/oppg_1/: CMakeLists.txt  main.cpp
Sikkerhet/oving_10s/oppg_2/: CMakeLists.txt  main.cpp
Sikkerhet/oving_10s/oppg_3/: CMakeLists.txt  main.cpp
Sikkerhet/oving_12s/oving12/: package.json
Sikkerhet/oving_12s/oving12/public/javascripts/: index.js
Sikkerhet/oving_12s/oving12/routes/: index.js
Sikkerhet/oving_12s/oving12/views/: index.jade  layout.jade
Sikkerhet/oving_12s/oving12_oppg2/: runscript.sh
Sikkerhet/oving_14s/: .env.example  app.js  package.json
Sikkerhet/oving_14s/config/: passport.js
Sikkerhet/oving_14s/public/stylesheets/: style.css
Sikkerhet/oving_14s/views/: index.jade  layout.jade
Sikkerhet/oving_6s/tests/: crypto_test.cpp
